# fing.chat

./: .env  README.md  index.html  pnpm-lock.yaml  tailwind.config.ts
server/: Pipfile  README.md  main.py  pyproject.toml  stt_server.py
src/: index.css  main.tsx
src/components/auth/: AuthModal.tsx  AuthPage.tsx
src/components/chat/: ChatInterface.tsx  RoomSelector.tsx
src/hooks/: useAuth.tsx
src/integrations/stt/: client.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: Index.tsx
supabase/: config.toml
supabase/functions/translate-message/: index.ts
supabase/migrations/: 20250816060035_8ac3b78f-5fd8-4eb9-a6f2-014537d2e4fc.sql  20250816060730_3d5daf1f-ab38-4477-b714-8ff8255239ad.sql  20250816061004_e488ab6d-dbfa-42b6-8dbd-f4efdb3e3977.sql  20250818063549_22a797f9-7370-4ade-aa03-668f4c9ecafc.sql  20250819074142_c714507a-b414-4c6a-98d5-d7a5dbf0cfea.sql
