[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "live-translation>=0.1.0",
    "numpy>=2.3.2",
    "opuslib>=3.0.1",
    "opuslib-next",
    "uvicorn>=0.35.0",
    "vosk==0.3.44",
]

[tool.uv.sources]
opuslib-next = { git = "https://github.com/thahao/opuslib-next", rev = "master" }
